--- a/linked/app/globals.css
+++ b/linked/app/globals.css
@@ -2,6 +2,19 @@
   @tailwind components;
   @tailwind utilities;
 
+  @layer components {
+    .icon {
+      @apply flex flex-col items-center justify-center text-sm font-light;
+    }
+    .icon svg {
+      @apply fill-white stroke-gray-300;
+    }
+
+    .icon p{
+      @apply text-gray-400 text-xs;
+    }
+  }
+
   @layer base {
     :root {
       --background: 0 0% 100%;
@@ -74,3 +87,7 @@
       @apply bg-background text-foreground;
     }
   }
+
+
+ 
+
