--- a/linked/app/globals.css
+++ b/linked/app/globals.css
@@ -13,6 +13,10 @@
     .icon p{
       @apply text-gray-400 text-xs;
     }
+
+    .postButton {
+      @apply flex justify-center;
+    }
   }
 
   @layer base {
